--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" ng-app="FarmersMarkets">
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
   <script src="js/marketsearch.js"></script>
   <meta charset="UTF-8">
   <title>Find a Farmer's Market near you</title>
@@ -15,7 +18,7 @@
 
 
 <div class="container">
-  <ul class="markets">
+  <ul class="markets list-unstyled">
 
   </ul>
 </div>
