--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <title>Find a Farmer's Market near you</title>
 </head>
 <body>
+	<center>
   <h1>Farmer's Markets</h1>
 <form action="" method="get">
   <input type="text" name="zipcode" placeholder="zipcode">
   <input type="submit" value="Search">
 </form>
-
+</center>
 
 <div class="container">
   <ul class="markets list-unstyled">
