cant use strong for some reason

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html lang="en" ng-app="FarmersMarkets">
 <head>
+	<link rel="stylesheet" href="css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
   <script src="js/marketsearch.js"></script>
   <meta charset="UTF-8">
   <title>Find a Farmer's Market near you</title>
@@ -16,12 +14,12 @@
   <input type="text" name="zipcode" placeholder="zipcode">
   <input type="submit" value="Search">
 </form>
-</center>
 
 <div class="container">
   <ul class="markets list-unstyled">
 
   </ul>
 </div>
+</center>
 </body>
 </html>
