added some styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="FarmersMarkets">
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="js/marketsearch.js"></script>
@@ -11,7 +12,7 @@
 	<center>
   <h1>Farmer's Markets</h1>
 <form action="" method="get">
-  <input type="text" name="zipcode" placeholder="zipcode">
+  <input type="text" name="zipcode" id="zipcode" placeholder="zipcode">
   <input type="submit" value="Search">
 </form>
 
