--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   </ul>
 </div>
 </center>
+<footer><a href="https://github.com/acreilly"><img src="http://i.imgur.com/L8oJeXI.png">Allie Reilly</a></footer>
 </body>
 </html>
